# MR2023

./: .gitignore  .gitmodules  Alice&Bob.c  Esina Valeriya  README.md  Taras  Task 2.c.sln  kosenko anton  matrix_last_last  task2.txt  task_1.c  uchebny_proekt.txt
Arslanov.Marsel/Matrix_lib/: CMakeLists.txt  matrix.c  matrix.h
Arslanov.Marsel/Matrix_lib/Examples/: CMakeLists.txt  main.c
Arslanov.Marsel/containers/: CMakeLists.txt  main.cpp
Arslanov.Marsel/containers/.cache/clangd/index/: main.cpp.A3730DB6FDE5C105.idx  vector.cpp.4DAB5593377F1CC7.idx  vector.hpp.7CDF9F8DA70CD916.idx
Arslanov.Marsel/containers/linked_list/: list.hpp  node.hpp
Arslanov.Marsel/containers/list/: list.hpp  node.hpp
Arslanov.Marsel/containers/priority_queue/: priority_queue.hpp
Arslanov.Marsel/containers/single_linked_list/: single_linked_list.cpp  single_linked_list.hpp
Arslanov.Marsel/containers/stack/: stack.hpp
Arslanov.Marsel/containers/vector/: array.cpp  array.hpp  vector.hpp
Arslanov.Marsel/graph/: CMakeLists.txt
Arslanov.Marsel/graph/include/: graph.hpp  parser.hpp
Arslanov.Marsel/graph/source/: graph.cpp  main.cpp  parser.cpp
Arslanov.Marsel/ray_casting/: .clang-format  .~lock.ray_casting.docx#  CMakeLists.txt  main.cpp  ray_casting.docx
Arslanov.Marsel/ray_casting/.cache/clangd/index/: console.hpp.14414AC7E3830A9E.idx  main.cpp.CD870A4AE9F3CDF5.idx  scene.cpp.8C049A271A258FD7.idx  scene.hpp.2A144AF9B801D90F.idx  shapes.cpp.329B9C07DD80613E.idx  shapes.hpp.AC070690C60ADCFD.idx  vec2.hpp.BD5E3CE9565D2846.idx  vec3.hpp.A56007E42C453C5F.idx
Arslanov.Marsel/ray_casting/Vecs/: vec2.hpp  vec3.hpp
Arslanov.Marsel/ray_casting/include/: console.hpp  scene.hpp  shapes.hpp
Arslanov.Marsel/ray_casting/source/: scene.cpp
Arslanov.Marsel/sorting/: CMakeLists.txt  main.cpp
Arslanov.Marsel/sorting/include/: sorting.hpp
Hitushkin.Kirill/sem 2/12. Graph/Graph/src/: CMakeLists.txt  Config.cmake.in  Graph.cpp
Hitushkin.Kirill/sem 2/4. Dynamic Array/DynamicArray/src/: CMakeLists.txt  Config.cmake.in  DynamicArray.cpp
Hitushkin.Kirill/sem 2/5. Linked list/LinkedList/src/: CMakeLists.txt  Config.cmake.in  LinkedList.cpp
Hitushkin.Kirill/task 3/: CMakeLists.txt
Hitushkin.Kirill/task 3/src/: main.cpp  matrix.cpp  matrix.hpp
Kiz.Nikolai/containers/: CMakeLists.txt  abstractContainer.hpp  main.cpp
Kiz.Nikolai/containers/dynamic_array/: dynamicArray.hpp
Kiz.Nikolai/containers/linked_list/: doublyLinkedList.hpp  linkedList.hpp  listNode.hpp
Kiz.Nikolai/containers/linked_list/inc/: linkedList.hpp  linkedListNode.hpp
Kiz.Nikolai/containers/priority_queue/: priorityQueue.hpp  queueNode.hpp
Kiz.Nikolai/containers/stack/: stack.hpp
Kiz.Nikolai/graphs/: CMakeLists.txt  main.cpp
Kiz.Nikolai/graphs/dataworker/: datacleaner.ipynb  datacleaner.py
Kiz.Nikolai/graphs/graph/: graph.cpp  graph.hpp
Kiz.Nikolai/graphs/parser/: parser.cpp  parser.hpp  parserException.cpp
Kiz.Nikolai/task1/: CMakeLists.txt
Kiz.Nikolai/task1/inc/: bankModel.h  capital.h
Kiz.Nikolai/task1/src/: bankModel.c  capital.c  main.c
Kiz.Nikolai/task2/: CMakeLists.txt  test  test.c
Kiz.Nikolai/task2/inc/: MatrixHandler.h
Kiz.Nikolai/task2/src/: MatrixHandler.c  main.c
Kiz.Nikolai/task3/: CMakeLists.txt  example.cpp  matrixHandler.cpp  matrixHandler.hpp
Kiz.Nikolai/task3/inc/: matrixHandler.hpp
Kiz.Nikolai/task3/src/: main.cpp  matrixHandler.cpp
Makarov.Georgy/5_AbstractData/lib/libabstract/: CMakeLists.txt
Makarov.Georgy/5_AbstractStructures/lib/abstract_structures/: CMakeLists.txt
Makarov.Georgy/6_Graph/lib/graph/: CMakeLists.txt
MakarovGeorgy/Coursework/: .gitignore  README.md  pyproject.toml
Papasymeonidis Aristotelis/Task5/: CMakeLists.txt  din_arr.cpp  din_arr.hpp  linked_list.cpp  linked_list.hpp  main.cpp
Papasymeonidis Aristotelis/Task5/include/din_arr/: din_arr.hpp
Papasymeonidis Aristotelis/Task5/include/double_linked_list/: double_linked_list.hpp
Papasymeonidis Aristotelis/Task5/include/linked_list/: linked_list.hpp
Papasymeonidis Aristotelis/Task5/include/queue/: queue.hpp
Papasymeonidis Aristotelis/Task5/src/: container_exception.cpp  din_arr.cpp  linked_list.cpp
Papasymeonidis Aristotelis/Task6/: CMakeLists.txt  parsing  parsing.cpp
Semikozov.Ian/2_matrixc/: CMakeLists.txt
Semikozov.Ian/2_matrixc/example/: CMakeLists.txt  example.c
Semikozov.Ian/5_abstractstructures/: CMakeLists.txt  deque.hpp  dlinked_list.hpp  dynamic_array.hpp  linked_list.hpp  main.cpp  priority_linked_list.hpp  priority_queue.hpp  queue.hpp  stack.hpp
Semikozov.Ian/5_abstractstructures/structures/: container_base.hpp  dlinked_list.hpp  stack.hpp
Semikozov.Ian/6_graph/: .clang-format  CMakeLists.txt  cities.csv  datacleaner.py  main.cpp
Semikozov.Ian/6_graph/inc/: debug.hpp  description.hpp  graph.hpp  parser.hpp
Semikozov.Ian/6_graph/src/: graph.cpp  main.cpp  parser.cpp
Semikozov.Ian/coursework/: CMakeLists.txt  Курсовая работа.odt
Semikozov.Ian/coursework/common/: defines.hpp  worker_base.hpp
Semikozov.Ian/coursework/inc/: adc_worker.hpp  commands.hpp  protocol.hpp  query.hpp  rt_data_buffer.hpp  stand_manager.hpp  steppers_worker.hpp
Semikozov.Ian/coursework/lib/: CMakeLists.txt
Semikozov.Ian/coursework/lib/ADS1115/: .clang-format  CMakeLists.txt  README.md
Semikozov.Ian/coursework/lib/MotorRequests/: .gitignore  .gitmodules  CMakeCXXCompiler.cmake  CMakeLists.txt  README.md  command.json
Semikozov.Ian/coursework/src/: adc_worker.cpp  main.cpp  stand_manager.cpp  steppers_worker.cpp
Semikozov.Ian/task3/: CMakeLists.txt  matrix.cpp  matrix.hpp
Semikozov.Ian/task3/example/: example.c  example.cpp
SharyninVlad/OrangeBotAll/OrangeBot_bot/: CMakeLists.txt
Sudneko Vladislav/RobotProject/PC/: CMakeLists.txt  CMakeLists.txt.user.05ed590  test_stream.py
Sudneko Vladislav/RobotProject/PC/src/: GCSCommunicator.hpp  HTTPRequester.hpp  PingService.hpp  RaspberryCommunicator.hpp  RobotController.hpp  main.cpp
Sudneko Vladislav/RobotProject/RTSPServer/: CMakeLists.txt  rtsp_stream.txt
Sudneko Vladislav/RobotProject/RTSPServer/src/: main.cpp
(+879 files in other folders)
